--- a/notebooks/week01_scheduler_basics.ipynb
+++ b/notebooks/week01_scheduler_basics.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# Demo: run reference FIFO scheduler\n",
-    "from src.reference.scheduler import FifoScheduler, Process\n",
+    "from reference.scheduler import FifoScheduler, Process\n",
     "s = FifoScheduler()\n",
     "procs = [Process(pid=1), Process(pid=2), Process(pid=3)]\n",
     "print('Ready queue pids:', [p.pid for p in procs])\n",
@@ -79,7 +79,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
