--- a/notebooks/week01_scheduler_basics.ipynb
+++ b/notebooks/week01_scheduler_basics.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "# Test student implementation (if present)\n",
     "try:\n",
-    "    from src.student.scheduler import StudentFifoScheduler, Process as SProcess\n",
+    "    from student.scheduler import StudentFifoScheduler, Process as SProcess\n",
     "    s = StudentFifoScheduler()\n",
     "    procs = [SProcess(pid=10), SProcess(pid=11)]\n",
     "    chosen = s.schedule(procs)\n",
