--- a/notebooks/week01_scheduler_basics.ipynb
+++ b/notebooks/week01_scheduler_basics.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98f60dd0",
+   "metadata": {},
+   "source": [
+    "**Demo** : run reference FIFO scheduler"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1e6d5a97",
