--- a/notebooks/week01_scheduler_basics.ipynb
+++ b/notebooks/week01_scheduler_basics.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Demo: run reference FIFO scheduler\n",
-    "from reference.scheduler import FifoScheduler, Process\n",
+    "from week01.reference.scheduler import FifoScheduler, Process\n",
     "s = FifoScheduler()\n",
     "procs = [Process(pid=1), Process(pid=2), Process(pid=3)]\n",
     "print('Ready queue pids:', [p.pid for p in procs])\n",
@@ -65,7 +65,7 @@
    "source": [
     "# Test student implementation (if present)\n",
     "try:\n",
-    "    from student.scheduler import StudentFifoScheduler, Process as SProcess\n",
+    "    from week01.student.scheduler import StudentFifoScheduler, Process as SProcess\n",
     "    s = StudentFifoScheduler()\n",
     "    procs = [SProcess(pid=10), SProcess(pid=11)]\n",
     "    chosen = s.schedule(procs)\n",
