Week 01 README.md and Notebook

--- a/notebooks/week01_scheduler_basics.ipynb
+++ b/notebooks/week01_scheduler_basics.ipynb
@@ -22,7 +22,8 @@
    "id": "98f60dd0",
    "metadata": {},
    "source": [
-    "**Demo** : run reference FIFO scheduler"
+    "**Demo** : run reference FIFO scheduler\n",
+    "Was macht der scheduler? Den entsprechenden Code finden Sie in `src/week01/reference/scheduler.py`"
    ]
   },
   {
@@ -48,10 +49,10 @@
    "source": [
     "## Aufgabe: Student-FIFO implementieren\n",
     "\n",
-    "Implementieren Sie in `src/student/scheduler.py` eine Klasse `StudentFifoScheduler`\n",
+    "Implementieren Sie in `src/week01/student/scheduler.py` eine Klasse `StudentFifoScheduler`\n",
     "mit der Methode `schedule(self, processes)`.\n",
     "\n",
-    "Die Signatur der Process-Dataclass ist bereits vorhanden in `src/student/scheduler.py`.\n",
+    "Die Signatur der Process-Dataclass ist bereits vorhanden in `src/week01/student/scheduler.py`.\n",
     "\n",
     "Sobald Sie implementiert haben, führen Sie die folgende Zelle aus, um Ihre Implementierung zu testen.\n"
    ]
@@ -76,14 +77,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae328059",
+   "metadata": {},
+   "source": [
+    "**Reflexion:** was ist passiert? Analysieren Sie den Code. Haben Sie erhalten, das was Sie erwartet haben?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8054d72",
+   "metadata": {},
+   "source": [
+    "### Interaktiv ausprobieren\n",
+    "\n",
+    "Analysieren Sie den *Convoy-Effekt* in einer neuen Zelle.\n",
+    "\n",
+    "1. Erstellen Sie 3 Prozesse mit folgenden Eigenschaften\n",
+    "\n",
+    "* Prozess 1: arrival = 0.0; burst = 100.0\n",
+    "* Prozess 2: arrival = 0.1; burst = 1.0\n",
+    "* Prozess 3: arrival = 0.2; burst = 1.0\n",
+    "\n",
+    "2. Führen Sie die Simulation aus\n",
+    "\n",
+    "* `res = run_simulation(FifoScheduler(), [p1,p2,p3])`\n",
+    "\n",
+    "3. Aus den Rückgabewerten berechnen Sie die Kenngrößen `avg_wait` und `avg_turnaround` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "35edd454",
    "metadata": {},
    "source": [
     "### Weiterführende Ideen\n",
     "\n",
-    "- Visualisieren Sie die Ready-Queue als Animation (matplotlib).\n",
-    "- Experimentieren Sie mit Prioritäten: erweitern Sie `schedule` um einfache Priority-Scheduling.\n",
-    "- Diskutieren Sie Vor- und Nachteile von FIFO vs Round-Robin.\n"
+    "- Visualisieren Sie die Ergebnisse anhand eines Balken-Diagramms (per PID) mit Waiting / Turnaround.\n"
    ]
   }
  ],
