--- a/notebooks/week01_scheduler_basics.ipynb
+++ b/notebooks/week01_scheduler_basics.ipynb
@@ -80,7 +80,7 @@
    "id": "ae328059",
    "metadata": {},
    "source": [
-    "**Reflexion:** was ist passiert? Analysieren Sie den Code. Haben Sie erhalten, das was Sie erwartet haben?"
+    "**Reflexion:** Was ist passiert? Analysieren Sie den Code. Haben Sie das erhalten, was Sie erwartet hatten?"
    ]
   },
   {
