--- a/notebooks/week02_rr.ipynb
+++ b/notebooks/week02_rr.ipynb
@@ -4,9 +4,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Week 02 — Round‑Robin & Preemption\\n\n",
-        "\\n\n",
-        "This notebook demonstrates the Round‑Robin scheduler and compares it with FIFO.\\n"
+        "# Week 02 — Round‑Robin & Preemption\n",
+        "\n",
+        "Dieses Notebook demonstriert den Round-Robin-Scheduler und fürht einen Vergleich mit FIFO durch.\n",
+        "\n",
+        "**Ziele**\n",
+        "\n",
+        "- Eine einfache FIFO-Strategie verstehen und testen\n",
+        "- Ausprobieren der Referenz-Implementation\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Einstieg**\n",
+        "\n",
+        "Führen Sie die unten stehende Zelle, um die Leistungskenngrößen der Scheduling-Strategien FIFO und RR miteinander zu vergleichen.  "
       ]
     },
     {
@@ -19,9 +33,9 @@
         "from week02.reference.scheduler import FifoScheduler, RoundRobinScheduler\n",
         "from week02.sim.simulator import run_simulation_fifo, run_simulation_rr\n",
         "\n",
-        "p1 = Process(pid=1, arrival=0.0, burst=100.0)\n",
-        "p2 = Process(pid=2, arrival=0.1, burst=1.0)\n",
-        "p3 = Process(pid=3, arrival=0.2, burst=1.0)\n",
+        "p1 = Process(pid=1, arrival=0.0, burst=20.0)\n",
+        "p2 = Process(pid=2, arrival=0.1, burst=3.0)\n",
+        "p3 = Process(pid=3, arrival=0.2, burst=7.0)\n",
         "procs = [p1,p2,p3]\n",
         "\n",
         "fifo = FifoScheduler()\n",
@@ -30,16 +44,251 @@
         "res_fifo = run_simulation_fifo(fifo, procs)\n",
         "res_rr = run_simulation_rr(rr, procs)\n",
         "\n",
-        "print('FIFO results:')\n",
+        "print('FIFO results (PID, waiting, turnaround):')\n",
         "for r in res_fifo:\n",
         "    print(r)\n",
-        "print('\\nRR results:')\n",
+        "print('\\nRR results (PID, waiting, turnaround, response):')\n",
         "for r in res_rr:\n",
         "    print(r)\n",
         "\n",
         "avg_wait_fifo = sum(w for (_,w,_) in res_fifo)/len(res_fifo)\n",
-        "avg_wait_rr = sum(w for (_,w,_) in res_rr)/len(res_rr)\n",
-        "print('\\navg_wait_fifo=', avg_wait_fifo, 'avg_wait_rr=', avg_wait_rr)\n"
+        "avg_wait_rr = sum(w for (_,w,_,_) in res_rr)/len(res_rr)\n",
+        "\n",
+        "avg_turn_fifo = sum(t for (_,_,t) in res_fifo)/len(res_fifo)\n",
+        "avg_turn_rr = sum(t for (_,_,t,_) in res_rr)/len(res_rr)\n",
+        "\n",
+        "avg_resp_rr = sum(r for (_,_,_,r) in res_rr)/len(res_rr)\n",
+        "\n",
+        "\n",
+        "print('\\navg_wait_fifo = ' + \"{:.2f}\".format(avg_wait_fifo) + \"; \" + 'avg_wait_rr = ' + \"{:.2f}\".format(avg_wait_rr))\n",
+        "print('\\navg_turn_fifo = ' + \"{:.2f}\".format(avg_turn_fifo) + \"; \" + 'avg_turn_rr = ' + \"{:.2f}\".format(avg_turn_rr))\n",
+        "print('\\navg_response_rr = ' + \"{:.2f}\".format(avg_resp_rr))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Visualisierung der Ergebnisse\n",
+        "\n",
+        "In der unten stehenden Zelle werden die Ergebnisse anhand eines Balken-Diagramms (per PID) mit Waiting / Turnaround visualisiert.\n",
+        "\n",
+        "- Führen Sie die Simulation oben mit verschiedenen Prozesseigenschaften\n",
+        "- Vergleichen Sie dabei die Ergebnisse für FIFO und RR\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
+        "# --- Benutze dicts (robust gegenüber Reihenfolge) ---\n",
+        "fifo_by_pid = {pid: (wait, turn) for pid, wait, turn in res_fifo}\n",
+        "rr_by_pid   = {pid: (wait, turn) for pid, wait, turn in res_rr}\n",
+        "\n",
+        "# Eine konsistente Reihenfolge bei den PIDs verwenden.\n",
+        "# Erste Option: PID-Reihenfolge in res_fifo, Zweite Option: sorted union (else).\n",
+        "if res_fifo:\n",
+        "    pid_order = [pid for pid, _, _ in res_fifo]\n",
+        "else:\n",
+        "    pid_order = sorted(set(list(fifo_by_pid.keys()) + list(rr_by_pid.keys())))\n",
+        "\n",
+        "# Wir müssen sicher gehen, dass alle PIDs berücksichtigt werden (Unterschiede zwischen FIFO und RR?)\n",
+        "all_pids = sorted(set(pid_order) | set(rr_by_pid.keys()))\n",
+        "# Die Reiehnfolge in res_fifo behalten und die restlichen hinzufügen\n",
+        "ordered_pids = [p for p in pid_order if p in all_pids] + [p for p in all_pids if p not in pid_order]\n",
+        "\n",
+        "# --- Extrahiere ausgerichtete Arrays (falls Werte fehlen, ersetze durch np.nan \"Not a Number\") ---\n",
+        "def get_vals(pid_list, lookup):\n",
+        "    waits = []\n",
+        "    turns = []\n",
+        "    for pid in pid_list:\n",
+        "        if pid in lookup:\n",
+        "            w, t = lookup[pid]\n",
+        "            waits.append(w)\n",
+        "            turns.append(t)\n",
+        "        else:\n",
+        "            waits.append(np.nan)\n",
+        "            turns.append(np.nan)\n",
+        "    return np.array(waits), np.array(turns)\n",
+        "\n",
+        "waits_fifo, turns_fifo = get_vals(ordered_pids, fifo_by_pid)\n",
+        "waits_rr,   turns_rr   = get_vals(ordered_pids, rr_by_pid)\n",
+        "\n",
+        "# Mittelwerte berechnen (ignoriere dabei NaNs)\n",
+        "mean_wait_fifo = np.nanmean(waits_fifo)\n",
+        "mean_turn_fifo = np.nanmean(turns_fifo)\n",
+        "mean_wait_rr   = np.nanmean(waits_rr)\n",
+        "mean_turn_rr   = np.nanmean(turns_rr)\n",
+        "\n",
+        "# --- Darstellung ---\n",
+        "x = np.arange(len(ordered_pids))\n",
+        "width = 0.35\n",
+        "\n",
+        "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12,5), sharey=False)\n",
+        "\n",
+        "# Vergelich: Waiting time\n",
+        "ax1.bar(x - width/2, waits_fifo, width, label='FIFO', alpha=0.8)\n",
+        "ax1.bar(x + width/2, waits_rr, width, label='RR', alpha=0.8)\n",
+        "ax1.set_xticks(x)\n",
+        "ax1.set_xticklabels([f'P{pid}' for pid in ordered_pids])\n",
+        "ax1.set_xlabel('PID')\n",
+        "ax1.set_ylabel('Waiting time (s)')\n",
+        "ax1.set_title('Waiting time: FIFO vs RR')\n",
+        "ax1.legend()\n",
+        "ax1.grid(axis='y', linestyle=':', alpha=0.5)\n",
+        "\n",
+        "# Vergleich: Turnaround time\n",
+        "ax2.bar(x - width/2, turns_fifo, width, label='FIFO', alpha=0.8)\n",
+        "ax2.bar(x + width/2, turns_rr, width, label='RR', alpha=0.8)\n",
+        "ax2.set_xticks(x)\n",
+        "ax2.set_xticklabels([f'P{pid}' for pid in ordered_pids])\n",
+        "ax2.set_xlabel('PID')\n",
+        "ax2.set_ylabel('Turnaround time (s)')\n",
+        "ax2.set_title('Turnaround time: FIFO vs RR')\n",
+        "ax2.legend()\n",
+        "ax2.grid(axis='y', linestyle=':', alpha=0.5)\n",
+        "\n",
+        "# Beschriften\n",
+        "txt = (f'avg_wait FIFO: {mean_wait_fifo:.2f} s\\n'\n",
+        "       f'avg_turn FIFO: {mean_turn_fifo:.2f} s\\n\\n'\n",
+        "       f'avg_wait RR: {mean_wait_rr:.2f} s\\n'\n",
+        "       f'avg_turn RR: {mean_turn_rr:.2f} s')\n",
+        "fig.suptitle('Vergleich FIFO vs Round-Robin (pro Prozess + Mittelwerte)', fontsize=14)\n",
+        "plt.subplots_adjust(top=0.85, wspace=0.35)\n",
+        "fig.text(0.5, 0.01, txt, ha='center', va='top', fontsize=10, bbox=dict(boxstyle='round', facecolor='white', alpha=0.8))\n",
+        "\n",
+        "plt.show()\n",
+        "\n",
+        "# --- Zusammenfassende Tabelle in der Konsole ausgeben ---\n",
+        "print(\"PID | wait_FIFO | wait_RR | turn_FIFO | turn_RR\")\n",
+        "for i, pid in enumerate(ordered_pids):\n",
+        "    print(f\"{pid:3} | {waits_fifo[i]:9.3f} | {waits_rr[i]:7.3f} | {turns_fifo[i]:9.3f} | {turns_rr[i]:7.3f}\")\n",
+        "print()\n",
+        "print(f\"avg_wait FIFO = {mean_wait_fifo:.3f}, avg_turn FIFO = {mean_turn_fifo:.3f}\")\n",
+        "print(f\"avg_wait RR   = {mean_wait_rr:.3f}, avg_turn RR   = {mean_turn_rr:.3f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Ein vollständig instrumentierter Simulator\n",
+        "\n",
+        "Um ein Gantt-Diagramm mit dem Zeitverlauf der Prozesse erstellen zu können, brauchen wir einen Simulator, der Start und Ende jedes Quantum für jeden Prozess liefert. Einen solchen Simulator finden Sie in in `src/week02/sim` als `run_simulation_rr_instrumented(scheduler, processes: List[Process])`.\n",
+        "\n",
+        "Der Code dieses Simulators ist nicht vollständig. Wenn Sie in der unten stehenden Zelle die Simulation durchführen, werden Sie einen Fehler bekommen `NotImplementedError(\"Student: Ergänzt hier arrivals/reinsertion/context-switch handling.\")`. Sie müssen den Code vervollständigen.\n",
+        "\n",
+        "Ergänzen Sie den Code, der nach dem Ausführen eines Quants passieren muss. Konkrete Anforderungen:\n",
+        "\n",
+        "1. Fügen Sie alle Prozesse ein, die *während* [start, end] angekommen sind, in die ready-Queue (in Ankunftsreihenfolge).\n",
+        "    - *Tipp:* push_arrivals_up_to(time) — benutzen, aber auf die Reihenfolge achten!\n",
+        "\n",
+        "2. Falls `p` noch nicht fertig ist (`p.remaining > float_eps`), dann muss `p` ans Ende von ready angefügt werden.\n",
+        "    - **WICHTIG**: Die Neuankömmlinge, die während des Quants eingetroffen sind, müssen *vor* `p` kommen.\n",
+        "\n",
+        "3. Wenn das Quantum abgelaufen ist (d.h. `exec_time == quantum`) UND der Prozess nicht fertig ist, so muss ein Context Switch modelliert werden:\n",
+        "`if context_switch_time > 0.0: time += context_switch_time`\n",
+        "    - (Optional: falls `record_switch_segments` `True` ist, zeichnet den CS-Segment).\n",
+        "    - *Hinweis:* Auch wenn danach nur `p` im ready steht, soll trotzdem ein CS stattfinden.\n",
+        "\n",
+        "4. Wenn der Prozess fertig ist (`p.remaining <= float_eps`), dann:\n",
+        "    - setze `per_process[p.pid]['finish'] = time`\n",
+        "    - berechne turnaround/waiting/response und füge in completed ein\n",
+        "\n",
+        "Tipp: Überlegt Euch die Reihenfolge:\n",
+        "\n",
+        "1. arrival handling,\n",
+        "2. reinsertion oder removal von p,\n",
+        "3. context switch time addition"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Simulation ausführen mit run_simulation_rr_instrumented\n",
+        "\n",
+        "from common.process import Process\n",
+        "from week02.reference.scheduler import FifoScheduler, RoundRobinScheduler\n",
+        "from week02.sim.simulator import run_simulation_rr_instrumented\n",
+        "\n",
+        "p1 = Process(pid=1, arrival=0.0, burst=20.0)\n",
+        "p2 = Process(pid=2, arrival=0.1, burst=3.0)\n",
+        "p3 = Process(pid=3, arrival=0.2, burst=7.0)\n",
+        "procs = [p1,p2,p3]\n",
+        "\n",
+        "# Wir erstellen den RR-Scheduler\n",
+        "rr = RoundRobinScheduler(quantum=1.0)\n",
+        "\n",
+        "# Die Simulation ausführen\n",
+        "# Die Ergebnisse sind jetzt ein dict\n",
+        "# context_switch_time = 0.5\n",
+        "res_rr_complete = run_simulation_rr_instrumented(rr, procs, context_switch_time = 0.5, record_switch_segments=True)\n",
+        "\n",
+        "# Ausgabe der wichtigsten Kennzahlen\n",
+        "for pid, info in sorted(res_rr_complete['per_process'].items()):\n",
+        "    arrival = info.get('arrival')\n",
+        "    burst = info.get('burst')\n",
+        "    first = info.get('first_start')\n",
+        "    finish = info.get('finish')\n",
+        "    total_run = info.get('total_run')\n",
+        "    print(\"PID: \" + str(pid) + \"; Arrival: \" + str(arrival) + \"; Burst: \" + str(burst) + \"; First start: \" + str(first) + \"; Finish: \" + str(finish))\n",
+        "print(\"\")\n",
+        "\n",
+        "for pid, wait, turn, resp in res_rr_complete['results']:\n",
+        "    print(f\"PID {pid}: waiting = {wait:.3f}, turnaround = {turn:.3f}, response = {resp:.3f}\")\n",
+        "print(\"Context switches:\", res_rr_complete['context_switches'])\n",
+        "print(\"\")\n",
+        "\n",
+        "print(\"timeline (first 10):\", res_rr_complete['timeline'][:10])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Visualisierung der Ergebnisse als Gantt-Diragramm\n",
+        "\n",
+        "Mit der instrumentierten Version des Simulators können wir den zeitlichen Verlauf der Prozessausführung darstellen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Wir gehen davon aus, dass die Ergebnisse in res_rr_complete sind\n",
+        "timeline = res_rr_complete['timeline']\n",
+        "pids = sorted({seg[0] for seg in timeline if seg[0] != 'cs'})\n",
+        "ypos = {pid: i for i, pid in enumerate(pids)}\n",
+        "\n",
+        "fig, ax = plt.subplots(figsize=(10, 1 + len(pids)*0.6))\n",
+        "cmap = plt.cm.tab10\n",
+        "for seg in timeline:\n",
+        "    if seg[0] == 'cs':\n",
+        "        # context switch segment\n",
+        "        _, s, e = seg\n",
+        "        ax.broken_barh([(s, e-s)], ( -0.4, 0.8), facecolors='lightgray')\n",
+        "    else:\n",
+        "        pid, s, e = seg\n",
+        "        ax.broken_barh([(s, e-s)], (ypos[pid]-0.4, 0.8), facecolors=[cmap(pid % 10)], edgecolor='black')\n",
+        "\n",
+        "ax.set_yticks(list(ypos.values()))\n",
+        "ax.set_yticklabels([f'P{pid}' for pid in pids])\n",
+        "ax.set_xlabel('time (s)')\n",
+        "ax.set_title('Gantt: RR (instrumented)')\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
       ]
     }
   ],
