Notebook Week 2 ergänzt

--- a/notebooks/week02_rr.ipynb
+++ b/notebooks/week02_rr.ipynb
@@ -10,8 +10,20 @@
         "\n",
         "**Ziele**\n",
         "\n",
-        "- Eine einfache FIFO-Strategie verstehen und testen\n",
-        "- Ausprobieren der Referenz-Implementation\n"
+        "- Verstehen, wie Round-Robin (RR) zeitlich arbeitet und wie Preemption funktioniert.\n",
+        "- Die Auswirkungen des Zeitschlitzes (quantum) und des Context-Switch-Overheads auf Metriken (response, waiting, turnaround) analysieren.\n",
+        "- Unterschiedliche Scheduler (FIFO vs RR) vergleichen und die Ursache des Convoy-Effekts erklären.\n",
+        "- Ein instrumentiertes Simulations-Setup benutzen, um Gantt-Diagramme zu erzeugen und das Scheduling-Verhalten visuell zu erklären.\n",
+        "- Fehlerquellen im Scheduler-Implementationsdesign erkennen (z. B. Reihenfolge von Arrival-Handling, Reinsertion, Kontextwechsel).\n",
+        "\n",
+        "**Leitfragen bei der Bearbeitung dieses Notebooks**\n",
+        "\n",
+        "1. Warum verringert RR für kurze Jobs die Wartezeit im Vergleich zu FIFO?\n",
+        "2. Was ist der Convoy-Effekt und wann tritt er auf?\n",
+        "3. Wie verändert das Quantum das Systemverhalten (sehr klein ↔ sehr groß)?\n",
+        "4. Warum müssen Ankünfte, die während eines Quants kommen, *vor* der Reinsertion des laufenden Prozesses stehen?\n",
+        "5. Was ist die Reaktionszeit (response) und wie unterscheidet sie sich von der Wartezeit?\n",
+        "6. Wie verändert Context-Switch-Zeit die optimale Wahl für das Quantum?\n"
       ]
     },
     {
