--- a/notebooks/week03_priority.ipynb
+++ b/notebooks/week03_priority.ipynb
@@ -4,14 +4,64 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Week 03 \u2014 Priority Scheduling & SJF/SRT\n\nThis notebook demonstrates Priority scheduling (non-preemptive), SJF (non-preemptive), and SRT (preemptive SJF)."
+        "# Week 03 — Priority Scheduling & SJF/SRT\n",
+        "\n",
+        "This notebook demonstrates Priority scheduling (non-preemptive), SJF (non-preemptive), and SRT (preemptive SJF).\n",
+        "\n",
+        "**Ziele**\n",
+        "\n",
+        "- Den Unterschied zwischen non-preemptive SJF und preemptive SRT erklären können;\n",
+        "- Wissen, wie Prioritäts-Scheduling funktioniert und welche Probleme (Starvation, Priority Inversion) auftreten können;\n",
+        "- Einfache Scheduler-Klassen in Python implementieren (SjfScheduler, SrtScheduler) und testen;\n",
+        "- Metriken (response, waiting, turnaround) mit Simulatoren messen und Gantt-Diagramme interpretieren;\n",
+        "- Einfache Gegenmaßnahmen wie Aging implementieren und ihre Wirkung analysieren.\n",
+        "\n",
+        "**Leitfragen bei der Bearbeitung dieses Notebooks**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Einstieg"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
-        "from common.process import Process\nfrom week03.reference.scheduler import PriorityScheduler, SjfScheduler, SrtScheduler\nfrom week03.sim.simulator import run_simulation_priority, run_simulation_sjf, run_simulation_srt\n\n# Example scenario where SRT helps\np1 = Process(pid=1, arrival=0.0, burst=8.0)\np2 = Process(pid=2, arrival=1.0, burst=4.0)\np3 = Process(pid=3, arrival=2.0, burst=1.0)\nprocs = [p1, p2, p3]\n\nprio = PriorityScheduler()\nsjf = SjfScheduler()\nsrt = SrtScheduler()\n\nprint('Priority (non-preemptive):')\nfor r in run_simulation_priority(prio, procs):\n    print(r)\nprint('\\nSJF (non-preemptive):')\nfor r in run_simulation_sjf(sjf, procs):\n    print(r)\nprint('\\nSRT (preemptive):')\nfor r in run_simulation_srt(srt, procs):\n    print(r)\n\navg_wait = lambda res: sum(w for (_,w,_) in res)/len(res)\nprint('\\navg_wait:')\nprint('priority:', avg_wait(run_simulation_priority(prio, procs)))\nprint('sjf:', avg_wait(run_simulation_sjf(sjf, procs)))\nprint('srt:', avg_wait(run_simulation_srt(srt, procs)))\n"
+        "from common.process import Process\n",
+        "from week03.reference.scheduler import PriorityScheduler, SjfScheduler, SrtScheduler\n",
+        "from week03.sim.simulator import run_simulation_priority, run_simulation_sjf, run_simulation_srt\n",
+        "\n",
+        "# Example scenario where SRT helps\n",
+        "p1 = Process(pid=1, arrival=0.0, burst=8.0)\n",
+        "p2 = Process(pid=2, arrival=1.0, burst=4.0)\n",
+        "p3 = Process(pid=3, arrival=2.0, burst=1.0)\n",
+        "procs = [p1, p2, p3]\n",
+        "\n",
+        "prio = PriorityScheduler()\n",
+        "sjf = SjfScheduler()\n",
+        "srt = SrtScheduler()\n",
+        "\n",
+        "print('Priority (non-preemptive):')\n",
+        "for r in run_simulation_priority(prio, procs):\n",
+        "    print(r)\n",
+        "print('\\nSJF (non-preemptive):')\n",
+        "for r in run_simulation_sjf(sjf, procs):\n",
+        "    print(r)\n",
+        "print('\\nSRT (preemptive):')\n",
+        "for r in run_simulation_srt(srt, procs):\n",
+        "    print(r)\n",
+        "\n",
+        "avg_wait = lambda res: sum(w for (_,w,_) in res)/len(res)\n",
+        "print('\\navg_wait:')\n",
+        "print('priority:', avg_wait(run_simulation_priority(prio, procs)))\n",
+        "print('sjf:', avg_wait(run_simulation_sjf(sjf, procs)))\n",
+        "print('srt:', avg_wait(run_simulation_srt(srt, procs)))\n"
       ]
     }
   ],
