--- a/notebooks/week03_priority.ipynb
+++ b/notebooks/week03_priority.ipynb
@@ -24,7 +24,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Einstieg"
+        "### Priority Scheduling\n",
+        "\n",
+        "In der folgenden Zelle werden die Scheduling-Strategien FIFO und Priority verglichen "
       ]
     },
     {
@@ -34,34 +36,179 @@
       "outputs": [],
       "source": [
         "from common.process import Process\n",
-        "from week03.reference.scheduler import PriorityScheduler, SjfScheduler, SrtScheduler\n",
-        "from week03.sim.simulator import run_simulation_priority, run_simulation_sjf, run_simulation_srt\n",
+        "# importiere aus Woche 2 für den Vergleich\n",
+        "from week02.sim.simulator import run_simulation_fifo\n",
+        "from week02.reference.scheduler import FifoScheduler\n",
+        "# importiere aus Woche 3 die neuen Scheduler und Simulatoren \n",
+        "from week03.reference.scheduler import PriorityScheduler, SjfScheduler\n",
+        "from week03.sim.simulator import run_simulation_priority, run_simulation_sjf\n",
         "\n",
-        "# Example scenario where SRT helps\n",
-        "p1 = Process(pid=1, arrival=0.0, burst=8.0)\n",
-        "p2 = Process(pid=2, arrival=1.0, burst=4.0)\n",
-        "p3 = Process(pid=3, arrival=2.0, burst=1.0)\n",
+        "# Erstelle die Prozesse \n",
+        "p1 = Process(pid=1, arrival=0.0, burst=100.0, priority=1)\n",
+        "p2 = Process(pid=2, arrival=0.0, burst=4.0, priority=0)\n",
+        "p3 = Process(pid=3, arrival=0.0, burst=1.0, priority=2)\n",
         "procs = [p1, p2, p3]\n",
         "\n",
+        "fifo = FifoScheduler()\n",
         "prio = PriorityScheduler()\n",
-        "sjf = SjfScheduler()\n",
-        "srt = SrtScheduler()\n",
+        "\n",
+        "print('FIFO (non-preemptive):')\n",
+        "res = run_simulation_fifo(fifo, procs)\n",
+        "print(res)\n",
         "\n",
         "print('Priority (non-preemptive):')\n",
-        "for r in run_simulation_priority(prio, procs):\n",
-        "    print(r)\n",
-        "print('\\nSJF (non-preemptive):')\n",
-        "for r in run_simulation_sjf(sjf, procs):\n",
-        "    print(r)\n",
-        "print('\\nSRT (preemptive):')\n",
-        "for r in run_simulation_srt(srt, procs):\n",
-        "    print(r)\n",
+        "res = run_simulation_priority(prio, procs)\n",
+        "print(res)\n",
         "\n",
+        "# Berechne die waiting times\n",
         "avg_wait = lambda res: sum(w for (_,w,_) in res)/len(res)\n",
         "print('\\navg_wait:')\n",
-        "print('priority:', avg_wait(run_simulation_priority(prio, procs)))\n",
-        "print('sjf:', avg_wait(run_simulation_sjf(sjf, procs)))\n",
-        "print('srt:', avg_wait(run_simulation_srt(srt, procs)))\n"
+        "print('FIFO:', avg_wait(run_simulation_fifo(fifo, procs)))\n",
+        "print('priority:', avg_wait(run_simulation_priority(prio, procs)))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Analyse der Ergebnisse**\n",
+        "\n",
+        "Löst `priority` das Problem des *convoy* komplett?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Die *richtigen* oder die *falschen* Prioritäten**\n",
+        "\n",
+        "Was passiert, wenn wir die richtigen bzw. die falschen Prioritäten haben?\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Erstelle neue Prozesse\n",
+        "# Fall 1: die richtigen Prioritäten\n",
+        "p1 = Process(pid=1, arrival=0.0, burst=100.0, priority=2)\n",
+        "p2 = Process(pid=2, arrival=0.0, burst=4.0, priority=1)\n",
+        "p3 = Process(pid=3, arrival=0.0, burst=1.0, priority=0)\n",
+        "procs_1 = [p1, p2, p3]\n",
+        "\n",
+        "# Fall 2: die falschen Prioritäten\n",
+        "p1 = Process(pid=1, arrival=0.0, burst=100.0, priority=0)\n",
+        "p2 = Process(pid=2, arrival=0.0, burst=4.0, priority=2)\n",
+        "p3 = Process(pid=3, arrival=0.0, burst=1.0, priority=1)\n",
+        "procs_2 = [p1, p2, p3]\n",
+        "\n",
+        "fifo = FifoScheduler()\n",
+        "prio = PriorityScheduler()\n",
+        "\n",
+        "print('FIFO (non-preemptive):')\n",
+        "res = run_simulation_fifo(fifo, procs)\n",
+        "print(res)\n",
+        "\n",
+        "print('Priority - richtige Prioritäten (non-preemptive):')\n",
+        "res = run_simulation_priority(prio, procs_1)\n",
+        "print(res)\n",
+        "\n",
+        "print('Priority - falsche Prioritäten (non-preemptive):')\n",
+        "res = run_simulation_priority(prio, procs_2)\n",
+        "print(res)\n",
+        "\n",
+        "# Berechne die waiting times\n",
+        "avg_wait = lambda res: sum(w for (_,w,_) in res)/len(res)\n",
+        "print('\\navg_wait:')\n",
+        "print('FIFO:', avg_wait(run_simulation_fifo(fifo, procs)))\n",
+        "print('priority - richtige Prioritäten:', avg_wait(run_simulation_priority(prio, procs_1)))\n",
+        "print('priority - falsche Prioritäten:', avg_wait(run_simulation_priority(prio, procs_2)))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Fazit**\n",
+        "\n",
+        "- Das Ergenis des Scheduling hängt von den Prioritäten!\n",
+        "- Wie können wir die richtigen Prioritäten wählen?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Starvation\n",
+        "\n",
+        "- Was passiert wenn *ständig* neue Prozesse mit höherer Priorität ankommen?\n",
+        "- Wann werden Prozesse mit niedriger Priorität ausgeführt? Was ist ihr *waiting time*?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "p1 = Process(pid=1, arrival=0.0, burst=50.0, priority=0)\n",
+        "p2 = Process(pid=2, arrival=0.0, burst=4.0, priority=2)\n",
+        "p3 = Process(pid=3, arrival=5.0, burst=5.0, priority=1)\n",
+        "p4 = Process(pid=4, arrival=11.0, burst=3.0, priority=0)\n",
+        "p5 = Process(pid=5, arrival=25.0, burst=30.0, priority=0)\n",
+        "p6 = Process(pid=6, arrival=26.0, burst=13.0, priority=1)\n",
+        "procs = [p1, p2, p3, p4, p5, p6]\n",
+        "\n",
+        "prio = PriorityScheduler()\n",
+        "\n",
+        "print('Priority (non-preemptive):')\n",
+        "res_prio = run_simulation_priority(prio, procs)\n",
+        "print(res)\n",
+        "\n",
+        "print('PRIO results (PID, waiting, turnaround):')\n",
+        "for r in res_prio:\n",
+        "    print(r)\n",
+        "\n",
+        "avg_wait_prio = sum(w for (_,w,_) in res_prio)/len(res_prio)\n",
+        "\n",
+        "avg_turn_prio = sum(t for (_,_,t) in res_prio)/len(res_prio)\n",
+        "\n",
+        "print('\\navg_wait_prio = ' + \"{:.2f}\".format(avg_wait_prio))\n",
+        "print('\\navg_turn_prio = ' + \"{:.2f}\".format(avg_turn_prio))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Shortest Job First (non-preemptive)\n",
+        "\n",
+        "SjF: Der kurzeste Prozess wird zuerst ausgeführt\n",
+        " \n",
+        "- Für die Prozesse unten vergleichen Sie die Strategien FIFO, priority und SjF\n",
+        "    - Es steht Ihnen einen SjF-Scheduler `SjfScheduler` in `/src/week03/ref/scheduler.py` zur Verfügung\n",
+        "    - Es steht Ihnen einen SjF-Simulator `run_simulation_sjf` in `/src/week03/sim/simulator.py` zur Verfügung\n",
+        "    - Geben Sie die Ergebnisse (PID, waiting, turnaround) für jeden Prozess und jede Strategie aus\n",
+        "    - Berechnen und geben Sie die durchnittswerte für `waiting time` und `turn around` aus\n",
+        "\n",
+        "**Vergessen Sie eventuell erfordeliche `import` statements nicht!**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "p1 = Process(pid=1, arrival=0.0, burst=50.0, priority=0)\n",
+        "p2 = Process(pid=2, arrival=0.0, burst=4.0, priority=2)\n",
+        "p3 = Process(pid=3, arrival=5.0, burst=5.0, priority=1)\n",
+        "p4 = Process(pid=4, arrival=11.0, burst=3.0, priority=0)\n",
+        "p5 = Process(pid=5, arrival=25.0, burst=30.0, priority=0)\n",
+        "p6 = Process(pid=6, arrival=26.0, burst=13.0, priority=1)\n",
+        "procs = [p1, p2, p3, p4, p5, p6]"
       ]
     }
   ],
