--- a/notebooks/week03_priority.ipynb
+++ b/notebooks/week03_priority.ipynb
@@ -40,8 +40,8 @@
         "from week02.sim.simulator import run_simulation_fifo\n",
         "from week02.reference.scheduler import FifoScheduler\n",
         "# importiere aus Woche 3 die neuen Scheduler und Simulatoren \n",
-        "from week03.reference.scheduler import PriorityScheduler, SjfScheduler\n",
-        "from week03.sim.simulator import run_simulation_priority, run_simulation_sjf\n",
+        "from week03.reference.scheduler import PriorityScheduler\n",
+        "from week03.sim.simulator import run_simulation_priority\n",
         "\n",
         "# Erstelle die Prozesse \n",
         "p1 = Process(pid=1, arrival=0.0, burst=100.0, priority=1)\n",
@@ -208,7 +208,39 @@
         "p4 = Process(pid=4, arrival=11.0, burst=3.0, priority=0)\n",
         "p5 = Process(pid=5, arrival=25.0, burst=30.0, priority=0)\n",
         "p6 = Process(pid=6, arrival=26.0, burst=13.0, priority=1)\n",
-        "procs = [p1, p2, p3, p4, p5, p6]"
+        "procs = [p1, p2, p3, p4, p5, p6]\n",
+        "\n",
+        "# *****\n",
+        "# Ihr Code ab hier!\n",
+        "# Sind imports erforderlich?\n",
+        "# *****"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Analyse der Ergebnisse**\n",
+        "\n",
+        "- Sind Sie mit dem Ergebnisse zufrieden?\n",
+        "- Was ergibt der Vergleich der Warte- und Ausführungszeiten?\n",
+        "- Was passiert mit kurzen Prozessen, die während der Ausführung eines langen Prozesses ankommen?\n",
+        "- Kennen Sie in der Realität immer die Burst-Zeiten im Voraus? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Preemptive Shortest Job First / Shortest Remaining Time first (SRT)\n",
+        "\n",
+        "- Mit dieser Strategie wird der laufende Prozess bei Ankunft eines neuen Prozesses unterbrochen.\n",
+        "- Der Scheduler entscheidet, anhand der noch verbleibenden Ausführungszeiten der Ready-Prozesse, welcher Prozess als nächstes ausgeführt wird\n",
+        "- Erweitern Sie das letzte Szenario um die SRT-Strategie\n",
+        "    - Es steht Ihnen der Scheduler `SrtScheduler` in `/src/week03/ref/scheduler.py` zur Verfügung\n",
+        "    - Es steht Ihnen der Simulator `run_simulation_srt` in `/src/week03/sim/simulator.py` zur Verfügung \n",
+        "\n",
+        "**Hinweis:** Der Code in `run_simulation_srt` ist nicht vollständig. Sie müssen eine entscheidende Stelle ergänzen!"
       ]
     }
   ],
